--- a/src/output.css
+++ b/src/output.css
@@ -554,10 +554,6 @@ video {
   display: none;
 }
 
-.visible {
-  visibility: visible;
-}
-
 .invisible {
   visibility: hidden;
 }
@@ -599,6 +595,10 @@ video {
   top: 0px;
 }
 
+.top-2 {
+  top: 0.5rem;
+}
+
 .top-20 {
   top: 5rem;
 }
@@ -607,20 +607,24 @@ video {
   top: calc(50% - 27px);
 }
 
-.top-2 {
-  top: 0.5rem;
+.top-auto {
+  top: auto;
 }
 
-.top-5 {
-  top: 1.25rem;
+.top-\[\] {
+  top: ;
+}
+
+.top-\[32px\] {
+  top: 32px;
+}
+
+.top-8 {
+  top: 2rem;
 }
 
 .top-3 {
   top: 0.75rem;
-}
-
-.top-1 {
-  top: 0.25rem;
 }
 
 .z-20 {
@@ -664,6 +668,10 @@ video {
   margin-bottom: 7rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -678,34 +686,6 @@ video {
 
 .mt-\[80px\] {
   margin-top: 80px;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.mb-32 {
-  margin-bottom: 8rem;
-}
-
-.mb-56 {
-  margin-bottom: 14rem;
-}
-
-.mb-64 {
-  margin-bottom: 16rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
 }
 
 .block {
@@ -777,6 +757,10 @@ video {
   height: 1px;
 }
 
+.h-\[20px\] {
+  height: 20px;
+}
+
 .h-\[30\%\] {
   height: 30%;
 }
@@ -827,14 +811,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[50px\] {
-  height: 50px;
-}
-
-.h-\[20px\] {
-  height: 20px;
 }
 
 .max-h-\[100px\] {
@@ -893,14 +869,6 @@ video {
   width: 100vw;
 }
 
-.w-\[10px\] {
-  width: 10px;
-}
-
-.w-\[50px\] {
-  width: 50px;
-}
-
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -949,10 +917,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -1063,6 +1027,18 @@ video {
   background-image: url('./img/banner.png');
 }
 
+.bg-carousel-1-sm {
+  background-image: url('./img/carousel-1-sm.png');
+}
+
+.bg-carousel-2-sm {
+  background-image: url('./img/carousel-2-sm.png');
+}
+
+.bg-carousel-3-sm {
+  background-image: url('./img/carousel-3-sm.png');
+}
+
 .bg-main-1-bg {
   background-image: url('./img/main-1-bg.png');
 }
@@ -1087,18 +1063,6 @@ video {
   background-image: url('./img/main-7-bg.png');
 }
 
-.bg-carousel-1-sm {
-  background-image: url('./img/carousel-1-sm.png');
-}
-
-.bg-carousel-2-sm {
-  background-image: url('./img/carousel-2-sm.png');
-}
-
-.bg-carousel-3-sm {
-  background-image: url('./img/carousel-3-sm.png');
-}
-
 .bg-cover {
   background-size: cover;
 }
@@ -1116,24 +1080,8 @@ video {
   padding: 0.5rem;
 }
 
-.p-20 {
-  padding: 5rem;
-}
-
 .p-8 {
   padding: 2rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
-}
-
-.p-12 {
-  padding: 3rem;
-}
-
-.p-14 {
-  padding: 3.5rem;
 }
 
 .px-2 {
@@ -1227,31 +1175,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-9xl {
-  font-size: 8rem;
-  line-height: 1;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .font-medium {
@@ -1482,40 +1405,20 @@ video {
     top: 7rem;
   }
 
-  .md\:top-1 {
-    top: 0.25rem;
-  }
-
-  .md\:top-2 {
-    top: 0.5rem;
-  }
-
-  .md\:row-span-6 {
-    grid-row: span 6 / span 6;
-  }
-
   .md\:mb-16 {
     margin-bottom: 4rem;
-  }
-
-  .md\:mb-8 {
-    margin-bottom: 2rem;
   }
 
   .md\:mb-5 {
     margin-bottom: 1.25rem;
   }
 
-  .md\:mb-3 {
-    margin-bottom: 0.75rem;
-  }
-
-  .md\:mb-10 {
-    margin-bottom: 2.5rem;
-  }
-
   .md\:mb-52 {
     margin-bottom: 13rem;
+  }
+
+  .md\:mb-8 {
+    margin-bottom: 2rem;
   }
 
   .md\:block {
@@ -1524,6 +1427,10 @@ video {
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:h-7 {
+    height: 1.75rem;
   }
 
   .md\:h-\[100\%\] {
@@ -1538,44 +1445,20 @@ video {
     height: 250px;
   }
 
-  .md\:h-\[680px\] {
-    height: 680px;
-  }
-
-  .md\:h-\[700px\] {
-    height: 700px;
-  }
-
-  .md\:h-\[\] {
-    height: ;
-  }
-
-  .md\:h-\[20px\] {
-    height: 20px;
-  }
-
-  .md\:h-\[30px\] {
-    height: 30px;
-  }
-
-  .md\:h-\[25px\] {
-    height: 25px;
+  .md\:h-\[35px\] {
+    height: 35px;
   }
 
   .md\:h-\[450px\] {
     height: 450px;
   }
 
-  .md\:h-\[40px\] {
-    height: 40px;
+  .md\:h-\[680px\] {
+    height: 680px;
   }
 
-  .md\:h-\[35px\] {
-    height: 35px;
-  }
-
-  .md\:h-7 {
-    height: 1.75rem;
+  .md\:h-\[700px\] {
+    height: 700px;
   }
 
   .md\:max-h-\[600px\] {
@@ -1638,10 +1521,6 @@ video {
     background-size: cover;
   }
 
-  .md\:p-8 {
-    padding: 2rem;
-  }
-
   .md\:p-10 {
     padding: 2.5rem;
   }
@@ -1679,49 +1558,36 @@ video {
     font-size: 120px;
   }
 
-  .md\:text-xl {
-    font-size: 1.25rem;
+  .md\:text-lg {
+    font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .md\:text-lg {
-    font-size: 1.125rem;
+  .md\:text-xl {
+    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 }
 
 @media (min-width: 1024px) {
-  .lg\:visible {
-    visibility: visible;
+  .lg\:top-3 {
+    top: 0.75rem;
   }
 
   .lg\:top-36 {
     top: 9rem;
   }
 
-  .lg\:top-3 {
-    top: 0.75rem;
-  }
-
-  .lg\:row-span-6 {
-    grid-row: span 6 / span 6;
-  }
-
   .lg\:mb-14 {
     margin-bottom: 3.5rem;
   }
 
-  .lg\:mb-8 {
-    margin-bottom: 2rem;
-  }
-
   .lg\:mb-64 {
     margin-bottom: 16rem;
+  }
+
+  .lg\:mb-8 {
+    margin-bottom: 2rem;
   }
 
   .lg\:block {
@@ -1740,6 +1606,10 @@ video {
     height: 35%;
   }
 
+  .lg\:h-\[50px\] {
+    height: 50px;
+  }
+
   .lg\:h-\[600px\] {
     height: 600px;
   }
@@ -1750,10 +1620,6 @@ video {
 
   .lg\:h-screen {
     height: 100vh;
-  }
-
-  .lg\:h-\[50px\] {
-    height: 50px;
   }
 
   .lg\:max-h-full {
