--- a/src/output.css
+++ b/src/output.css
@@ -570,9 +570,18 @@ video {
   position: relative;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
 .inset-y-0 {
   top: 0px;
   bottom: 0px;
+}
+
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
 }
 
 .bottom-20 {
@@ -589,6 +598,14 @@ video {
 
 .right-0 {
   right: 0px;
+}
+
+.right-\[40px\] {
+  right: 40px;
+}
+
+.right-\[80px\] {
+  right: 80px;
 }
 
 .top-0 {
@@ -611,52 +628,20 @@ video {
   top: calc(50% - 27px);
 }
 
-.right-5 {
-  right: 1.25rem;
+.left-20 {
+  left: 5rem;
 }
 
-.right-12 {
-  right: 3rem;
+.top-10 {
+  top: 2.5rem;
 }
 
-.right-10 {
-  right: 2.5rem;
+.top-14 {
+  top: 3.5rem;
 }
 
-.right-\[10px\] {
-  right: 10px;
-}
-
-.right-\[15px\] {
-  right: 15px;
-}
-
-.right-\[20px\] {
-  right: 20px;
-}
-
-.right-\[30px\] {
-  right: 30px;
-}
-
-.right-\[60px\] {
-  right: 60px;
-}
-
-.right-\[50px\] {
-  right: 50px;
-}
-
-.right-\[100px\] {
-  right: 100px;
-}
-
-.right-\[40px\] {
-  right: 40px;
-}
-
-.right-\[80px\] {
-  right: 80px;
+.isolate {
+  isolation: isolate;
 }
 
 .z-20 {
@@ -665,6 +650,14 @@ video {
 
 .z-30 {
   z-index: 30;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .col-span-6 {
@@ -683,9 +676,18 @@ video {
   grid-row: span 7 / span 7;
 }
 
+.m-2 {
+  margin: 0.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.-mx-3 {
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
 }
 
 .mb-10 {
@@ -716,6 +718,14 @@ video {
   margin-top: 80px;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .block {
   display: block;
 }
@@ -743,6 +753,21 @@ video {
 .size-7 {
   width: 1.75rem;
   height: 1.75rem;
+}
+
+.size-11 {
+  width: 2.75rem;
+  height: 2.75rem;
+}
+
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.size-6 {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .h-1 {
@@ -813,6 +838,10 @@ video {
   height: 480px;
 }
 
+.h-\[5\%\] {
+  height: 5%;
+}
+
 .h-\[55\%\] {
   height: 55%;
 }
@@ -839,14 +868,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[5\%\] {
-  height: 5%;
-}
-
-.h-5 {
-  height: 1.25rem;
 }
 
 .max-h-\[100px\] {
@@ -905,6 +926,14 @@ video {
   width: 100vw;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -917,12 +946,30 @@ video {
   max-width: 100%;
 }
 
+.max-w-7xl {
+  max-width: 80rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
 
+.flex-none {
+  flex: none;
+}
+
 .shrink-0 {
   flex-shrink: 0;
+}
+
+.-translate-y-1 {
+  --tw-translate-y: -0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -943,12 +990,12 @@ video {
   animation: marquee 32s linear infinite;
 }
 
-.cursor-pointer {
-  cursor: pointer;
-}
-
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -959,10 +1006,6 @@ video {
   align-items: center;
 }
 
-.justify-end {
-  justify-content: flex-end;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -971,17 +1014,27 @@ video {
   justify-content: space-between;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-x-20 {
   -moz-column-gap: 5rem;
        column-gap: 5rem;
+}
+
+.gap-x-1 {
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+
+.gap-x-2\.5 {
+  -moz-column-gap: 0.625rem;
+       column-gap: 0.625rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1006,6 +1059,16 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.divide-y > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+
+.divide-gray-900\/5 > :not([hidden]) ~ :not([hidden]) {
+  border-color: rgb(17 24 39 / 0.05);
 }
 
 .overflow-x-hidden {
@@ -1036,6 +1099,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .border-l-4 {
   border-left-width: 4px;
 }
@@ -1059,20 +1126,18 @@ video {
   background-color: rgb(255 255 255 / 0.5);
 }
 
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
 .bg-banner {
   background-image: url('./img/banner.png');
-}
-
-.bg-carousel-1-sm {
-  background-image: url('./img/carousel-1-sm.png');
-}
-
-.bg-carousel-2-sm {
-  background-image: url('./img/carousel-2-sm.png');
-}
-
-.bg-carousel-3-sm {
-  background-image: url('./img/carousel-3-sm.png');
 }
 
 .bg-main-1-bg {
@@ -1099,6 +1164,18 @@ video {
   background-image: url('./img/main-7-bg.png');
 }
 
+.bg-swiper-1-sm {
+  background-image: url('./img/swiper-1-sm.png');
+}
+
+.bg-swiper-2-sm {
+  background-image: url('./img/swiper-2-sm.png');
+}
+
+.bg-swiper-3-sm {
+  background-image: url('./img/swiper-3-sm.png');
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -1118,6 +1195,10 @@ video {
 
 .p-8 {
   padding: 2rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-2 {
@@ -1143,6 +1224,21 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-20 {
@@ -1181,12 +1277,28 @@ video {
   padding-top: 6%;
 }
 
+.pt-16 {
+  padding-top: 4rem;
+}
+
 .font-krona {
   font-family: KronaOne-Regular, sans-serif;
 }
 
 .font-libreBodoni_boldItalic {
   font-family: LibreBodoni-BoldItalic, serfif;
+}
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.font-sans {
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 .text-2xl {
@@ -1213,8 +1325,25 @@ video {
   line-height: 1.25rem;
 }
 
+.text-sm\/6 {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+}
+
+.text-\[16px\] {
+  font-size: 16px;
+}
+
 .font-medium {
   font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.font-thin {
+  font-weight: 100;
 }
 
 .tracking-widest {
@@ -1246,6 +1375,29 @@ video {
   color: rgb(140 171 251 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[1\] {
+  color: 1;
+}
+
 .opacity-50 {
   opacity: 0.5;
 }
@@ -1254,10 +1406,58 @@ video {
   opacity: 0.8;
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-100 {
+  opacity: 1;
+}
+
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.ring-1 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-gray-900\/5 {
+  --tw-ring-color: rgb(17 24 39 / 0.05);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-150 {
+  transition-duration: 150ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
+}
+
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 .will-change-transform {
@@ -1324,6 +1524,11 @@ video {
   background-color: rgb(212 251 113 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:text-mainYellow:hover {
   --tw-text-opacity: 1;
   color: rgb(212 251 113 / var(--tw-text-opacity, 1));
@@ -1332,24 +1537,6 @@ video {
 .hover\:text-subPurple:hover {
   --tw-text-opacity: 1;
   color: rgb(140 171 251 / var(--tw-text-opacity, 1));
-}
-
-.focus\:rounded-md:focus {
-  border-radius: 0.375rem;
-}
-
-.focus\:bg-gray-100:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
-}
-
-.focus\:bg-opacity-90:focus {
-  --tw-bg-opacity: 0.9;
-}
-
-.focus\:text-gray-800:focus {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 
 .active\:bg-opacity-50:active {
@@ -1365,7 +1552,25 @@ video {
   opacity: 0.6;
 }
 
+.group:hover .group-hover\:ms-\[5px\] {
+  margin-inline-start: 5px;
+}
+
+.group:hover .group-hover\:bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.group:hover .group-hover\:text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity, 1));
+}
+
 @media (min-width: 640px) {
+  .sm\:absolute {
+    position: absolute;
+  }
+
   .sm\:ml-6 {
     margin-left: 1.5rem;
   }
@@ -1382,12 +1587,33 @@ video {
     display: none;
   }
 
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .sm\:flex-col {
+    flex-direction: column;
+  }
+
   .sm\:justify-start {
     justify-content: flex-start;
   }
 
-  .sm\:justify-end {
-    justify-content: flex-end;
+  .sm\:justify-center {
+    justify-content: center;
+  }
+
+  .sm\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
+  .sm\:gap-y-0 {
+    row-gap: 0px;
   }
 
   .sm\:space-x-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1396,9 +1622,44 @@ video {
     margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .sm\:divide-x > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 0;
+    border-right-width: calc(1px * var(--tw-divide-x-reverse));
+    border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+  }
+
+  .sm\:divide-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 0;
+    border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
+    border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
+  }
+
+  .sm\:border-x {
+    border-left-width: 1px;
+    border-right-width: 1px;
+  }
+
+  .sm\:border-gray-900\/5 {
+    border-color: rgb(17 24 39 / 0.05);
+  }
+
+  .sm\:p-6 {
+    padding: 1.5rem;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .sm\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .sm\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
   }
 
   .sm\:text-\[100px\] {
@@ -1411,20 +1672,16 @@ video {
     visibility: visible;
   }
 
-  .md\:absolute {
-    position: absolute;
+  .md\:right-\[100px\] {
+    right: 100px;
+  }
+
+  .md\:right-\[50px\] {
+    right: 50px;
   }
 
   .md\:top-28 {
     top: 7rem;
-  }
-
-  .md\:top-3 {
-    top: 0.75rem;
-  }
-
-  .md\:right-\[80px\] {
-    right: 80px;
   }
 
   .md\:mb-16 {
@@ -1449,10 +1706,6 @@ video {
 
   .md\:hidden {
     display: none;
-  }
-
-  .md\:h-7 {
-    height: 1.75rem;
   }
 
   .md\:h-\[100\%\] {
@@ -1503,10 +1756,6 @@ video {
     flex-direction: row;
   }
 
-  .md\:justify-end {
-    justify-content: flex-end;
-  }
-
   .md\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1.25rem * var(--tw-space-x-reverse));
@@ -1531,16 +1780,16 @@ video {
     margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
   }
 
-  .md\:bg-carousel-1 {
-    background-image: url('./img/carousel-1.png');
+  .md\:bg-swiper-1 {
+    background-image: url('./img/swiper-1.png');
   }
 
-  .md\:bg-carousel-2 {
-    background-image: url('./img/carousel-2.png');
+  .md\:bg-swiper-2 {
+    background-image: url('./img/swiper-2.png');
   }
 
-  .md\:bg-carousel-3 {
-    background-image: url('./img/carousel-3.png');
+  .md\:bg-swiper-3 {
+    background-image: url('./img/swiper-3.png');
   }
 
   .md\:bg-cover {
@@ -1656,8 +1905,16 @@ video {
     width: 6rem;
   }
 
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .lg\:items-center {
     align-items: center;
+  }
+
+  .lg\:gap-4 {
+    gap: 1rem;
   }
 
   .lg\:space-y-6 > :not([hidden]) ~ :not([hidden]) {
@@ -1675,20 +1932,16 @@ video {
     padding-right: 2rem;
   }
 
-  .lg\:pt-\[160px\] {
-    padding-top: 160px;
-  }
-
-  .lg\:pt-\[5\%\] {
-    padding-top: 5%;
-  }
-
   .lg\:pt-\[150px\] {
     padding-top: 150px;
   }
 
   .lg\:pt-\[3\%\] {
     padding-top: 3%;
+  }
+
+  .lg\:pt-\[5\%\] {
+    padding-top: 5%;
   }
 
   .lg\:text-2xl {
@@ -1729,5 +1982,9 @@ video {
 @media (min-width: 1280px) {
   .xl\:max-w-7xl {
     max-width: 80rem;
+  }
+
+  .xl\:gap-8 {
+    gap: 2rem;
   }
 }
