feat : product localStorage

--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  /* Chrome, Safari, Edge, Opera */
+  .no-spinner::-webkit-outer-spin-button,
+  .no-spinner::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  .no-spinner[type="number"] {
+    -moz-appearance: textfield;
+  }
+}
+
 @font-face {
     font-family: 'LibreBodoni-BoldItalic';
     src: url('./fonts/LibreBodoni-BoldItalic.ttf') format('truetype');
